render function renders a button

--- a/app/packages/mtr-hangout/lib/client/buttons.html
+++ b/app/packages/mtr-hangout/lib/client/buttons.html
@@ -1,3 +1,4 @@
 <template name="simpleHangoutButton">
+    <div id="hangout"></div>
     <button type="button" class="render hangout button" id="render-simple-hangout">Start Hangout</button>
 </template>
