trying to source google api

--- a/app/packages/mtr-hangout/lib/client/buttons.html
+++ b/app/packages/mtr-hangout/lib/client/buttons.html
@@ -1,4 +1,4 @@
 <template name="simpleHangoutButton">
-    <div id="hangout"></div>
+    <button id="hangout"></button>
     <button type="button" class="render hangout button" id="render-simple-hangout">Start Hangout</button>
 </template>
