Hangout method returns API - callback is needed

--- a/app/packages/mtr-hangout/lib/client/buttons.html
+++ b/app/packages/mtr-hangout/lib/client/buttons.html
@@ -1,4 +1,4 @@
 <template name="simpleHangoutButton">
-    <button id="hangout"></button>
+    <g:hangout render="createhangout"></g:hangout>
     <button type="button" class="render hangout button" id="render-simple-hangout">Start Hangout</button>
 </template>
