--- a/app/packages/mtr-hangouts/lib/client/hangouts_widgets.html
+++ b/app/packages/mtr-hangouts/lib/client/hangouts_widgets.html
@@ -1,3 +1,13 @@
+<template name="hangoutsWidgets">
+    {{#if loadingWidgets "twitterWidgetsLoaded" false}}
+        Oh no! The Hangouts library couldn't load!
+    {{else}}
+        {{#unless loadingWidgets "twitterWidgetsLoaded" true}}
+            {{> simpleHangoutButton}}
+        {{/unless}}
+    {{/if}}
+</template>
+
 <template name="simpleHangoutButton">
     <g:hangout render="createhangout"></g:hangout>
 </template>
